-
Bug
-
Resolution: Done
-
P2: Important
-
5.6, 5.7, 5.8
-
None
-
810b6defac666c7652a77b5e4fd5b70a6fbe0c54 02ed4c65618b0f27b9ccb6867ab4d633612415c8
QSvgIconEngine::paint() uses method which returns integer value, so fractional value (e.g. 1.5) is rounded down. This causes bad painting of SVG icons e.g. in QTreeWidget.
The method which returns qreal value is available since Qt 5.6.
| For Gerrit Dashboard: QTBUG-59729 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 189640,2 | QSvgIconEngine: Paint correct size if device pixel ratio is fractional | 5.8 | qt/qtsvg | Status: MERGED | +2 | 0 |
| 189765,3 | QSvgIconEngine: Paint correct size if device pixel ratio is fractional | 5.6 | qt/qtsvg | Status: MERGED | +2 | 0 |