QSvgIconEngine: Paint correct size if device pixel ratio is fractional

Use method which returns qreal. It is available since Qt 5.6.

Task-number: QTBUG-59729
Change-Id: Ifc1a101c8dd837597c35ce14f0314218d2882501
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>